--- a/app/src/main/res/layout/fragment_post_list.xml
+++ b/app/src/main/res/layout/fragment_post_list.xml
@@ -14,6 +14,7 @@
         android:layout_height="?actionBarSize"
         android:background="@color/white"
         app:tabTextColor="@color/black"
+        android:elevation="10dp"
         app:tabInlineLabel="true"
         app:tabTextAppearance="@style/TextAppearance.AppCompat.Small"/>
 
