1. Theme color added, card background changed to gradient, App icon added and other UI changes 2. Locale added for Arabic 3. Data Binding added for example purpose 4. AppSession created for DataStore

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,21 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".presentation.fragments.LoginFragment">
+    <data>
+        <variable name="vm" type="com.example.rxjavasample.presentation.viewmodel.LoginViewModel"/>
+    </data>
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.fragments.LoginFragment"
     android:orientation="vertical"
+    android:padding="20dp"
     android:gravity="center"
-    android:background="@color/white">
+    android:background="@drawable/login_gradient">
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:layout_marginBottom="30dp">
+        <TextView
+            android:id="@+id/englishTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/english"
+            android:layout_marginEnd="20dp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/arabicTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/arabic"
+            android:textStyle="bold"/>
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/hola"
+        android:layout_margin="30dp"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:textSize="40sp"/>
 
     <EditText
         android:id="@+id/emailET"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
         android:inputType="textEmailAddress"
         android:hint="@string/email"
-        android:autofillHints="emailAddress"/>
+        android:layout_margin="10dp"
+        android:padding="10dp"
+        android:layoutDirection="locale"
+        android:background="@drawable/edit_text_background"
+        android:autofillHints="emailAddress" />
+
     <TextView
         android:id="@+id/invalidEmail"
         android:layout_width="wrap_content"
@@ -31,9 +71,13 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:inputType="textPassword"
+        android:padding="10dp"
+        android:background="@drawable/edit_text_background"
+        android:layoutDirection="locale"
         android:hint="@string/password"
         android:maxLength="15"
         android:autofillHints="password"/>
+
     <TextView
         android:id="@+id/invalidPass"
         android:layout_width="wrap_content"
@@ -47,9 +91,13 @@
         android:id="@+id/submitBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/login"
+        android:text="@string/submit"
+        android:elevation="5dp"
         android:layout_margin="10dp"
         android:layout_gravity="center_horizontal"
-        android:enabled="false"/>
+        android:enabled="false"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/button_background"/>
 
 </LinearLayout>
+</layout>
