--- a/app/src/main/res/drawable/edit_text_background.xml
+++ b/app/src/main/res/drawable/edit_text_background.xml
@@ -4,9 +4,12 @@
         <shape
             android:shape="rectangle">
             <corners
-                android:radius="10dp">
+                android:radius="20dp">
             </corners>
-            <solid android:color="@color/white" />
+            <gradient
+                android:startColor="@color/white"
+                android:endColor="@color/white">
+            </gradient>
         </shape>
     </item>
 </selector>
