--- a/app/src/main/res/drawable/login_gradient.xml
+++ b/app/src/main/res/drawable/login_gradient.xml
@@ -3,10 +3,11 @@
     <item>
         <shape
             android:shape="rectangle">
-            <corners
-                android:radius="10dp">
-            </corners>
-            <solid android:color="@color/white" />
+            <gradient
+                android:startColor="@color/white"
+                android:endColor="@color/light_blue"
+                android:angle="90">
+            </gradient>
         </shape>
     </item>
 </selector>
