--- a/app/src/main/res/layout/list_card.xml
+++ b/app/src/main/res/layout/list_card.xml
@@ -13,8 +13,8 @@
         app:cardCornerRadius="10dp"
         android:focusable="true"
         android:clickable="true"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:background="@drawable/light_grey_bg">
+        android:elevation="10dp"
+        android:foreground="?android:attr/selectableItemBackground">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -25,16 +25,19 @@
                 android:id="@+id/postId"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:layoutDirection="locale" />
             <TextView
                 android:id="@+id/postTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layoutDirection="locale"
                 android:textStyle="bold"/>
             <TextView
                 android:id="@+id/postBody"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layoutDirection="locale" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
