--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,6 +13,7 @@
         <action
             android:id="@+id/action_loginFragment_to_postListFragment"
             app:destination="@id/postListFragment"
+            app:popUpTo="@id/loginFragment"
             app:popUpToInclusive="true"/>
     </fragment>
 
